k8s/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: skill-radar-route
  namespace: public-webapp
spec:
  parentRefs:
    - name: cloud-sinapse-gateway
      namespace: gateway
      sectionName: https
  hostnames: ["radar.sinapse.nc"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: skill-radar
          port: 80
